--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -6,19 +6,6 @@
 # WinKey = Mod4, Alt=Mod1
 set $mod Mod4
 
-### Input/output/seat configuration
-# Moved to shell script to in order to have more functionality
-exec fish --command "sway_setup_desktop --mode upstairs"
-# this can only be used in config file:
-input * xkb_numlock enabled
-
-seat * idle_wake keyboard switch
-
-# Wallpaper
-output * bg #000000 solid_color
-#output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-#exec glpaper "HDMI-A-1" $upstairs_monitorL $XDG_CONFIG_HOME/glpaper/fragments/matrix.frag
-
 ### Key bindings
 #
 # Basics:
@@ -190,156 +177,10 @@ mode passthrough {
 }
 bindsym $mod+Pause mode passthrough
 
-
-# font for title bars
-font pango:DejaVu Sans Mono, Font Awesome 6 Free 10
-#font pango:DejaVu Sans Mono 10, Font Awesome 6 Free 10, Font Awesome 6 Brands 10
-
-# Application hotkeys
-# ━━━━━━━━━━━━━━━━━━━━━━━━
-# NOTE: exec --no-startup-id is not supported/required in sway
-
-set $term foot
-bindsym $mod+Return exec $term
-
-# Note: it's recommended that you pass the final command to sway so that it can note the workspace the command was run on
-# so when the child gets around to opening the window sway can place it on the original workspace 
-# (eg. if you launch something then immediately switch to another workspace before the window appears).
-bindsym $mod+d exec fish --command=sway_menu | xargs swaymsg exec --
-
-set $_menu bemenu --fn "Monospace 12" --hf "#2B83A6" --tf "#2B83A6" --prompt
-set $prompt echo | $_menu
-
-
-# Scratchpad (send windows there and get them back later)
-# Move the currently focused window to the scratchpad
-bindsym $mod+Shift+minus move scratchpad
-
-# Show the next scratchpad window or hide the focused scratchpad window.
-# If there are multiple scratchpad windows, this command cycles through them.
-#bindsym $mod+minus scratchpad show
-
-bindsym $mod+minus exec (swaymsg "[app_id=dropdown] scratchpad show") || exec $term --app-id dropdown
-for_window [app_id="dropdown"] floating enable, \
-    border pixel 5, \
-    resize set 70 ppt 60 ppt, \
-    move position center, \
-    move to scratchpad, \
-    scratchpad show
-
-bindsym $mod+Shift+g exec google-chrome-stable
-bindsym $mod+g exec firefox
-for_window [class="Google-chrome"] border none
-for_window [app_id="Google-chrome"] border none
-for_window [class="MozillaWindowClass"] border none
-for_window [app_id="firefox"] border none
-
-bindsym $mod+k exec kodi
-for_window [class="Kodi"] border none
-
-for_window [class="Screenruler"] border none
-
-for_window [shell=".*"] title_format "%title :: %shell"
-
-for_window [title="WayVNC - TigerVNC"] title_format "<span foreground='yellow'>%title :: %shell</span>"
-
-bindsym $mod+e exec $term -e ranger
-
-bindsym Print exec "kill -9 (pgrep --full 'fish --command=screenshot')" || exec fish --command=screenshot
-bindsym $mod+Print exec fish --command=screenshot_focused
-bindsym $mod+l exec fish --command="sway_lock --debug 2>>/tmp/swaylock_manual.log"
-bindsym --locked $mod+F1 exec fish --command="sway_setup_desktop --toggle"
-bindsym $mod+F2 exec fish --command=sway_selector
-bindsym $mod+F3 exec fish --command=sway_preview_outputs
-bindsym --locked $mod+F5 exec swaymsg output "*" dpms on
-bindsym $mod+F9 exec fish --command=sway_move_all_workspaces
-bindsym $mod+F7 exec "kill -9 (pgrep --full 'fish --command=switchaudio --menu')" || exec fish --command='switchaudio --menu'
-bindsym --locked $mod+F7 exec fish --command=switchaudio
-bindsym --locked $mod+F8 exec fish --command=sway_focus_tv
-
-# Media keys
-bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +2% && notify-send --hint string:x-dunst-stack-tag:volume --hint int:value:"$(pamixer --get-volume)" --app-name volumeOSD "Vol"
-bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -2% && notify-send --hint string:x-dunst-stack-tag:volume --hint int:value:"$(pamixer --get-volume)" --app-name volumeOSD "Vol"
-bindsym --locked XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-bindsym --locked XF86AudioPlay exec playerctl play-pause
-bindsym --locked XF86AudioNext exec playerctl next
-bindsym --locked XF86AudioPrev exec playerctl previous
-bindsym --locked XF86AudioStop exec playerctl stop
-bindsym Shift+XF86AudioLowerVolume exec playerctl position 3+
-bindsym Shift+XF86AudioRaiseVolume exec playerctl position 3-
-
-# Japanese IME
-#bindsym $mod+Shift+a exec fish --command=ibus-toggle
-
-bindsym $mod+Shift+r exec kitty --name=launcher -e "fish --command 'complete --do-complete | sort -u | fzf | xargs -r swaymsg -t command exec'"
-for_window [app_id="^launcher$"] floating enable, border none
-
-bindsym $mod+grave exec fish --command=sway_new_workspace
-bindsym $mod+Shift+grave exec fish --command="sway_new_workspace --move-focused"
-
-# ┏━━━━━━━━━━━━━━━━━━━━━━━━┓	
-# ┃ Autostart
-# ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
-# The below is needed for certain systemd services such as the one provided by mako to work.
-# Mako itself will be autostarted by systemd whenever something wants to use notifications,
-# however if I want to manually start a service that requires sway's environment vars then
-# the systemctl commands must be run synchronously and not split into two exec statements, 
-# since otherwise the service may be started before systemctl import-environment is complete.
-# For example: exec "systemctl --user import-environment; systemctl --user start example.service"
-exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK
-exec hash dbus-update-activation-environment 2>/dev/null && \
-     dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
-
-# Running swayidle as a systemd service in order to be able to turn it on/off easier
-# using a Custom block in i3status-rs
-exec systemctl --user start swayidle.service
-
-# Restart udiskie service to try and make it display tray icon
-# Disable for now since the tray icon is broken (red smiley face)
-#exec systemctl --user restart udiskie.service
-
-#exec systemctl --user start ibus.service
-# Note: change to exec if not using --replace flag
-#exec_always DISPLAY= ibus-daemon --xim --replace --daemonize
-exec_always fcitx5 -d --replace
-
-exec_always fish --command='switchaudio --device=headphones'
-# would sometimes get system starting at 100%
-exec pamixer --set-volume 20
-
-exec autotiling-rs
-exec fish --command "sway_autodisconnect_controller"
-exec swaywsr --icons awesome --no-names --remove-duplicates --config $XDG_CONFIG_HOME/swaywsr/config.toml
-
-#AmmCon
-#exec google-chrome-stable --user-data-dir=$XDG_CONFIG_HOME/ammcon-chrome --app=$AMMCON_URL -class=ammcon
-#assign [class="ammcon"] $workspace02
-#for_window [class="ammcon"] border none
-
-# Enable polkit auth for GUI apps
-exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-
-#open security camera streams
-#exec mpv --title="washitsu" rtsp://10.9.8.135:7447/5a9e6fc05e0e9fb13861fc06_0 --mute=yes --quiet
-#assign [title="washitsu"] 2
-
-for_window [app_id="mpv"] inhibit_idle fullscreen
-for_window [title=".*\(Kayo Sports\).*"] inhibit idle visible
-for_window [title=".*\(YouTube\).*"] inhibit idle visible
-for_window [app_id="pavucontrol"] floating enable
-for_window [class="steam_app*"] inhibit_idle focus
-
-
-# ┏━━━━━━━━━━━━━━━━━━━━━━━━┓	
-# ┃ Theming
-# ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
-# For all applications except GTK:
-seat seat0 xcursor_theme ComixCursors-Slim-Blue
-
 # ┏━━━━━━━━━━━━━━━━━━━━━━━━┓
 # ┃ Other config files
 # ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
 include /etc/sway/config.d/*
-include ~/.config/sway/config.d/*
+include config.d/*
 # TODO?
-#include ~/.config/sway/`hostname`/*
+#include `hostname`/*
