--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -19,3 +19,6 @@ video-sync=display-resample
 # so that the source framerate jives better with the display's refresh rate
 interpolation
 tscale=oversample
+
+[jftui]
+fs
