--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -1,11 +1,19 @@
 [icons]
-name = "awesome5"
+icons = "awesome5"
 
 [theme]
-name = "slick"
+theme = "slick"
 [theme.overrides]
 separator = ""
 separator_bg = "auto"
+
+[[block]]
+# since have title bars disabled on laptop
+block = "focused_window"
+if_command = '[[ "$(</etc/hostname)" == *"lap"* ]]'
+[block.format]
+full = "$title|"
+short = "$title.str(0,30)|"
 
 [[block]]
 block = "pacman"
@@ -18,10 +26,11 @@ interval = 1800
 hide_when_uptodate = true
 [[block.click]]
 button = "left"
-cmd = "fakeroot pacman -Qu --dbpath /tmp/checkup-db-juaninch/ | wofi --show dmenu"
+cmd = "fakeroot pacman -Qu --dbpath /tmp/checkup-db-$USER/ | wofi --show dmenu"
 
 [[block]]
 block = "music"
+if_command = '[[ "$(</etc/hostname)" == *"desk"* ]]'
 format = "$combo.rot-str(20) $prev $play $next |"
 interface_name_exclude = [".*kdeconnect.*"]
 [[block.click]]
@@ -47,7 +56,7 @@ format_swap = "$swap_used_percents.eng(2)"
 
 [[block]]
 block = "cpu"
-format = "$utilization $boost"
+format = "$utilization{ $boost|}"
 
 [[block]]
 block = "temperature"
@@ -60,7 +69,7 @@ interval = 5
 
 [[block]]
 block = "custom"
-command = "check_vpn --barmode"
+command = "wg show interfaces"
 interval = 60
 
 [[block]]
@@ -155,14 +164,22 @@ toggle_on = ""
 toggle_off = ""
 
 [[block]]
+block = "battery"
+if_command = '[[ "$(</etc/hostname)" == *"lap"* ]]'
+driver = "sysfs"
+device = "CMB1"
+format = "$percentage{ $time|}|N/A"
+
+[[block]]
 block = "time"
 interval = 5
 [block.format]
 full = "%a %d %b %H:%M"
-short = "%H:%M"
+#short = "%H:%M"
 
 [[block]]
 block = "toggle"
+if_command = '[[ "$(</etc/hostname)" == *"desk"* ]]'
 command_on = "sway_setup_tv_gaming"
 command_off = "sway_end_tv_gaming"
 command_state = "lgtv audio getVolume"
@@ -171,6 +188,7 @@ interval = 60
 
 [[block]]
 block = "bluetooth"
+if_command = '[[ "$(</etc/hostname)" == *"desk"* ]]'
 mac = "D0:BC:C1:E6:57:5C"
 format = "$connected$available{PS5}|$available{D/C}|N/A"
 [block.theme_overrides]
@@ -180,6 +198,7 @@ alternating_tint_fg = "#000000"
 
 [[block]]
 block = "battery"
+if_command = '[[ "$(</etc/hostname)" == *"desk"* ]]'
 #driver = "upower"
 #device = "battery_ps_controller_battery_d0obcoc1oe6o57o5c"
 # upower missing devices not supported yet in async ver
