sway: add comment for window rule

--- a/sway/.config/sway/config.d/rules
+++ b/sway/.config/sway/config.d/rules
@@ -1,3 +1,4 @@
+# can easily spot if something is running in Xwayland
 for_window [shell=".*"] title_format "%title :: %shell"
 
 for_window [class="Google-chrome"] border none
