swaywsr: add more icons

--- a/swaywsr/.config/swaywsr/config.toml
+++ b/swaywsr/.config/swaywsr/config.toml
@@ -17,6 +17,7 @@ private_browsing = ""
 Google-chrome = ""
 ranger = ""
 Kodi = ""
+jftui = ""
 Steam = ""
 steam = ""
 gamescope = ""
@@ -26,6 +27,9 @@ Sonixd = ""
 youtube-viewer = ""
 mpv =  ""
 vlc =  ""
+"jetbrains-studio" = ""
+"Gimp-2.10" = ""
+"org.gnome.gitlab.YaLTeR.VideoTrimmer" = ""
 "org.jellyfin.jellyfinmediaplayer" =  ""
 "org.pwmt.zathura" = ""
 "org.https://nomacs.nomacs" = ""
