sway: add host specific config

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -182,5 +182,4 @@ bindsym $mod+Pause mode passthrough
 # ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
 include /etc/sway/config.d/*
 include config.d/*
-# TODO?
-#include `hostname`/*
+include config.d/host-specific/`hostnamectl hostname`
