--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -182,4 +182,4 @@ bindsym $mod+Pause mode passthrough
 # ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
 include /etc/sway/config.d/*
 include config.d/*
-include config.d/host-specific/`hostnamectl hostname`
+include "config.d/host-specific/`hostnamectl hostname`"
