wofi: add multiple keybinds for submit
Apparently this has been a thing for 2 years but not documented...
(https://hg.sr.ht/~scoopta/wofi/rev/0abb275b1cd6c50ada2cc121317e26cffc92a154)

--- a/wofi/.config/wofi/config
+++ b/wofi/.config/wofi/config
@@ -3,6 +3,4 @@ drun-print_command=true
 
 gtk_dark=true
 
-key_submit=Enter
-key_submit=KP_Enter
-key_submit=Return
+key_submit=Return,Enter,KP_Enter
