--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -26,10 +26,10 @@ interval = 1800
 hide_when_uptodate = true
 [[block.click]]
 button = "left"
-cmd = "fakeroot pacman -Qu --dbpath /tmp/checkup-db-$USER/ | wofi --show dmenu"
+cmd = "{ fakeroot pacman -Qu --dbpath /tmp/checkup-db-$USER/ & paru --query --upgrades --aur; } | cat | wofi --show dmenu"
 [[block.click]]
 button = "right"
-cmd = "foot"
+cmd = 'foot --app-id scratchpad_dropdown'
 
 [[block]]
 block = "music"
@@ -38,7 +38,7 @@ format = "$combo.rot-str(20) $prev $play $next|"
 interface_name_exclude = [".*kdeconnect.*"]
 [[block.click]]
 button = "middle"
-cmd = "allow_only_one_instance sonixd"
+cmd = "allow_only_one_instance sonixd --enable-features=UseOzonePlatform --ozone-platform=wayland"
 
 [[block]]
 block = "disk_space"
@@ -77,6 +77,12 @@ interval = 5
 
 [[block]]
 block = "net"
+device = "^mull.*"
+format = "$device"
+hide_inactive = true
+
+[[block]]
+block = "net"
 format = "$speed_down.eng(3,B,M) $speed_up.eng(3,B,M)"
 icons_format = "{icon}"
 [block.icons_overrides]
@@ -96,6 +102,7 @@ icons_format = " "
 # pulseaudio
 "alsa_output.pci-0000_00_1b.0.analog-stereo" = ""
 "alsa_output.pci-0000_00_1f.3.analog-stereo" = ""
+"alsa_output.pci-0000_00_1f.3.analog-stereo.3" = ""
 "alsa_output.usb-Harman_Multimedia_JBL_Pebbles_1.0.0-00.analog-stereo" = "U"
 "alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00145592-00.analog-stereo" = "D"
 "bluez_sink.20_74_CF_26_25_D0.a2dp_sink" = "BT"
@@ -105,6 +112,7 @@ icons_format = " "
 "alsa_output.pci-0000_01_00.1.hdmi-stereo-extra5" = "TV"
 # pipewire-pulse
 "alsa_output.pci-0000:00:1b.0.analog-stereo" = ""
+"alsa_output.pci-0000:00:1f.0.analog-stereo.3" = ""
 [[block.click]]
 button = "left"
 cmd = "allow_only_one_instance switchaudio"
@@ -162,6 +170,7 @@ command_on = "systemctl --user start swayidle"
 command_off = "systemctl --user stop swayidle"
 command_state = "systemctl --user status swayidle &>/dev/null; test $status -eq 0; and echo on"
 icons_format = "  {icon}"
+interval = 10
 [block.icons_overrides]
 toggle_on = ""
 toggle_off = ""
